--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.1.0",
     "@expo-google-fonts/nunito": "^0.1.0",
+    "@react-native-community/datetimepicker": "^3.2.0",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "@types/react-native-datepicker": "^1.7.0",
     "expo": "~40.0.0",
     "expo-font": "~8.4.0",
+    "expo-image-picker": "~9.2.0",
     "expo-status-bar": "~1.0.3",
     "feather-icons": "^4.28.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-modal-datetime-picker": "^9.2.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-web": "~0.13.12",
     "standard": "^16.0.3"
